docker: add external network param
Signed-off-by: markoburcul <marko@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,7 @@ nim_waku_cont_rest_port: 8645
 #nim_waku_node_rest_address: ~
 #nim_waku_pubsub_topics: ~
 #nim_waku_cluster_id: ~
+#nim_waku_cont_network:~
 
 # Container healthcheck
 healthcheck_interval: 30s
